--- a/zhongyuan/index.html
+++ b/zhongyuan/index.html
@@ -63,28 +63,28 @@
 				<a href="#">More</a>
 			</div>
 			<div class="management list_item one">
-				<span></span>
+				<img src="images/bg.png" alt="">
 				<p>办公物业项目</p>
 				<a href="#">></a>
 			</div>
 			<div class="management list_item two">
-				<span></span>
+				<img src="images/bs.png" alt="">
 				<p>别墅物业项目</p>
 				<a href="#">></a>
 			</div>
 			<div class="management list_item three">
-				<span></span>
+				<img src="images/zz.png" alt="">
 				<p>住宅物业项目</p>
 				<a href="#">></a>
 			</div>
 			<div class="management list_item four">
-				<span></span>
+				<img src="images/zs.png" alt="">
 				<p>中食饮食部服务</p>
 				<a href="#">></a>
 			</div>
 			<div class="management list_item five">
-				<span></span>
-				<p>保洁、会务及花卉租摆服务</p>
+				<img src="images/bj.png" alt="">
+				<p>保洁、会务及花卉租摆业务</p>
 				<a href="#">></a>
 			</div>
 		</div>
@@ -137,6 +137,7 @@
 	</div>
 	<!-- 介绍部分 开始 -->
 	<!--新闻开始 -->
+	<div class="clearfix">
 		<!-- 左边  开始 -->
 		<div class="col_r news fl">
 			<div class="management latest">
@@ -201,8 +202,14 @@
 			</div>
 		</div>
 			<!-- 右边  结束 -->
+	</div>
 	<!--新闻结束 -->
-
+	<div class="foot">
+		<div>
+			<p class="tech">版权所有 @2009：香远（北京）投资有限公司</p>
+		<p class="coyright">技术支持：中远网络（北京）有限公司 </p>
+		</div>
+	</div>
 	<script>
 		//获取所有需要的元素
 		var bigImage = document.getElementById("bigImage");
