第二次完整项目

--- a/zhongyuan/index.html
+++ b/zhongyuan/index.html
@@ -22,14 +22,15 @@
 			<div class="double_line"></div>
 			<div class="shortcut">
 				<ul>
-					<li><a href="#">首页</a></li>
-					<li><a href="#">物业管理</a></li>
-					<li><a href="#">后勤保障</a></li>
-					<li><a href="#">船员中心</a></li>
-					<li><a href="#">物流仓储中心</a></li>
-					<li><a href="#">新闻中心</a></li>
-					<li><a href="#">企业文化</a></li>
-					<li><a href="#">招聘信息</a></li>
+					<li><a href="#" class="current_color">首页</a></li>
+					<li><a href="html/company_profile_my.html">公司简介</a></li>
+					<li><a href="html/property_management_my.html">物业管理</a></li>
+					<li><a href="html/logistical_support_my.html">后勤保障</a></li>
+					<li><a href="html/seaman_center_my.html">船员中心</a></li>
+					<li><a href="html/talent_recruitment_my.html">物流仓储中心</a></li>
+					<li><a href="html/news_center_my.html">新闻中心</a></li>
+					<li><a href="html/enterprise_culture_my.html">企业文化</a></li>
+					<li><a href="html/personnel_recruitment_my.html">招聘信息</a></li>
 					<li><a href="#">联系我们</a></li>
 				</ul>
 			</div>
